fixing spacing on nav

--- a/public_html/assets/styles/desktop.css
+++ b/public_html/assets/styles/desktop.css
@@ -5,6 +5,11 @@
 	.navbar-default .navbar-nav>li>a {
 	    font-weight: bold;
 	}
+
+	.navbar-default .navbar-nav>li>a {
+	    padding: 15px 15px;
+	}
+
 }
 @media (min-width: 992px) {
 	.content-item .content-container h4 {
