--- a/public_html/assets/styles/tablet.css
+++ b/public_html/assets/styles/tablet.css
@@ -27,7 +27,7 @@
 	}
 	.navbar-default .navbar-nav>li>a {
 	    font-weight: bold;
-	    padding: 15px 5px;
+	    padding: 15px 11px;
 	}
 	.navbar-default .navbar-nav>li>a:hover {
 	    color: #3d3d3d;
